--- a/kadai_013/関数を使いこなそう.ipynb
+++ b/kadai_013/関数を使いこなそう.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqOWCYO1K3cm",
-        "outputId": "894a990d-4916-4b0a-8522-55620df79008"
+        "outputId": "8c297426-9054-4f8e-d58e-3e0a16babffc"
       },
       "outputs": [
         {
@@ -34,10 +34,10 @@
         }
       ],
       "source": [
-        "def add_tax(price, tax=0.1):\n",
+        "def add_tax(price, tax):\n",
         "  total = price * (1 + tax)\n",
         "  return total\n",
-        "price_with_tax = add_tax(3000)\n",
+        "price_with_tax = add_tax(3000, 0.1)\n",
         "print(f\"{price_with_tax}円\")"
       ]
     }
